--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Muhammad Hawash</title>
+    <title>404</title>
 
     <link rel="stylesheet" type="text/css" href="css/main.css@v=1.css" />
     <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
